--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-color: var(--bg-color);
+  background-image: url(imgs/fundo.png);
   color: var(--text-color);
   font-family: var(--text-font);
   line-height: 1.6;
@@ -30,13 +30,13 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 60px;
-  background: var(--bg-color);
   font-weight: 700;
 }
 
 .logo {
   font-family: var(--title-font);
-  font-size: 22px;
+  font-size: 30px;
+  margin-left: 28px;
 }
 
 .menu {
@@ -55,18 +55,23 @@ body {
 }
 
 .btn.primary {
-  background-color: var(--primary);
+  background-color: #403937;
   color: #fff;
 }
 
 .btn.secondary {
-  background-color: #f4b860;
+  background-color: #248541;
   color: #fff;
 }
 
 .btn.small {
   padding: 8px 14px;
   font-size: 14px;
+  background-color: #E5F9EF;
+  display: flex;      
+  align-items: center;        
+  justify-content: center; 
+  text-align: center;    
 }
 
 /* ===== Hero ===== */
@@ -75,8 +80,9 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 60px 80px;
-  background-image: url('bg-pattern.png');
   background-size: cover;
+  background-position: center;
+  border-radius: 0 0 20px 20px;
 }
 
 .hero-text h1 {
@@ -92,29 +98,38 @@ body {
   margin-bottom: 20px;
 }
 
-.hero-text ul {
+/* ===== Benefícios ===== */
+.beneficios ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px 60px;
   list-style: none;
-  margin-bottom: 25px;
+  padding: 0;
+  margin: 30px 0;
 }
 
-.hero-text li {
-  margin: 6px 0;
-}
-
-.buttons {
+.beneficios li {
   display: flex;
-  gap: 15px;
+  align-items: center;
+  gap: 12px;
+  font-size: 16px;
+  color: #403937;
+  font-family: var(--text-font);
 }
 
-.hero-img img {
-  max-width: 320px;
+.beneficios img {
+  width: 30px;
+  height: 30px;
+  background-color: #403937;
+  padding: 8px;
+  border-radius: 50%;
+  object-fit: contain;
 }
 
 /* ===== Produtos ===== */
 .produtos {
   background-color: #fff;
   padding: 60px 80px;
-  border-radius: 20px 20px 0 0;
 }
 
 .produtos h2 {
@@ -170,11 +185,12 @@ body {
   font-size: 16px;
   color: var(--primary);
   margin-bottom: 10px;
+  font-family: var(--title-font);
 }
 
 /* ===== Footer ===== */
 footer {
-  background-color: var(--bg-color);
+  background-image: url(imgs/fundo.png);
   padding: 40px 80px;
   display: flex;
   justify-content: space-between;
